--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,7 +4,6 @@
 
 @layer base {
   :root {
-
     --background: 0 0% 100%;
 
     --foreground: 20 14.3% 4.1%;
@@ -53,10 +52,9 @@
 
     --chart-5: 27 87% 67%;
 
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
   .dark {
-
     --background: 20 14.3% 4.1%;
 
     --foreground: 60 9.1% 97.8%;
@@ -103,15 +101,6 @@
 
     --chart-4: 280 65% 60%;
 
-    --chart-5: 340 75% 55%
-  }
-}
-
-@layer base {
-  * {
-    @apply border-border;
-  }
-  body {
-    @apply bg-background text-foreground;
+    --chart-5: 340 75% 55%;
   }
 }
